Fix Header alignment and spacing

--- a/foundations/flex/02-flex-header/style.css
+++ b/foundations/flex/02-flex-header/style.css
@@ -1,6 +1,24 @@
+*{
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
 .header  {
   font-family: monospace;
   background: papayawhip;
+  display: flex;
+  padding:10px;
+  margin: 10px;
+  justify-content: space-between;
+
+}
+
+.left-links, .right-links{
+  display: flex;
+  align-items: center;
+  flex-flow:row wrap;
+  
 }
 
 .logo {
@@ -14,6 +32,9 @@
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  display: flex;
+  gap: 10px;
+
 }
 
 a {
